finished matching page

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -55,7 +55,7 @@
 				</div>
 			</nav>
 		</div>
-		<main></main>
+		<main class="homepage"></main>
 		<section class="info-sec">
 			<h2 class="info-title">UFit</h2>
 			<div class="info">
