finished login UI

--- a/client/public/login.html
+++ b/client/public/login.html
@@ -58,7 +58,23 @@
             </div>
     </div>
 
-    <center><div id="rectangleBox"></div></center>
+    <center>
+        <div id="rectangleBox">
+            <h2> Login</h2>
+            <form>
+                <label for="username">Username:</label><br>
+                <input type="username" id="username" name="username"><br><br>
+                <label for="password">Password:</label><br>
+                <input type="password" id="password" name="password"><br><br>
+            </form>
+
+            <p>Forgot Password?</p>
+
+            <button type="button" class="btn btn-primary">Login</button>
+
+
+        </div>
+    </center>
 
 </body>
 </html>
