--- a/client/public/login.html
+++ b/client/public/login.html
@@ -61,20 +61,23 @@
     <center>
         <div id="rectangleBox">
             <h2> Login</h2>
-            <form>
-                <label for="username">Username:</label><br>
-                <input type="username" id="username" name="username"><br><br>
-                <label for="password">Password:</label><br>
-                <input type="password" id="password" name="password"><br><br>
-            </form>
-
-            <p>Forgot Password?</p>
-
-            <button type="button" class="btn btn-primary">Login</button>
-
-
+           <form action="">
+                <label for="email" class="form-label">Email:</label>
+                <input type="email" id="email" class="form-control" placeholder="my@email.com"><br>
+                <label for="password" class="form-label">Password:</label>
+                <input type="password" id="password" class="form-control" placeholder="Password"><br>
+           </form>
+           <p>Forgot Password?</p>
+           <button type="button" class="btn btn-primary">Login</button>
         </div>
+        
     </center>
+
+    <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"
+	></script>
 
 </body>
 </html>
