checked html for errors

--- a/client/public/login.html
+++ b/client/public/login.html
@@ -56,22 +56,21 @@
                 <!-- Only one of these shows at once -->
                 <!-- <button class="btn btn-outline-success">Login</button> -->
             </div>
+        </nav>
     </div>
 
-    <center>
-        <div id="rectangleBox">
-            <h2> Login</h2>
-           <form action="">
-                <label for="email" class="form-label">Email:</label>
-                <input type="email" id="email" class="form-control" placeholder="my@email.com"><br>
-                <label for="password" class="form-label">Password:</label>
-                <input type="password" id="password" class="form-control" placeholder="Password"><br>
-           </form>
-           <p>Forgot Password?</p>
-           <button type="button" class="btn btn-primary">Login</button>
-        </div>
-        
-    </center>
+    <div id="rectangleBox">
+        <h2> Login</h2>
+        <form>
+            <label for="email" class="form-label">Email:</label>
+            <input type="email" id="email" class="form-control" placeholder="my@email.com"><br>
+            <label for="password" class="form-label">Password:</label>
+            <input type="password" id="password" class="form-control" placeholder="Password"><br>
+        </form>
+        <p>Forgot Password?</p>
+        <button type="button" class="btn btn-primary">Login</button>
+    </div>
+
 
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
