--- a/client/public/matchHistory.html
+++ b/client/public/matchHistory.html
@@ -39,8 +39,8 @@
 
 
     <div class="container border">
-        
-        <div class="container-fluid pull-left">      
+        <!-- I cannot figure how to remove the margin. Can you try to fix it? -->
+        <div class="container-fluid">      
             <div class="row">
                 <div class="col-3">
                     <div class="card border-0">
@@ -57,8 +57,38 @@
                 <div class="col">
                     <h1>Jake From State Farm</h1><br>
                     <h4>Last Match:2 Months Ago</h4><br>
-                    <h4>Contact Info: xxx-xxx-xxxx</h4>
+                    <h4>Contact Info: xxx-xxx-xxxx</h4><br>
+                    <h4> Past Workout:</h4><br>
 
+                    <div class ="container">
+                        <div class = "row">
+                            <div class = "col-4">
+                                <div class="card">
+                                    <div class="card-body">
+                                      TODO: Fill In Workout 1
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class = "col-4">
+                                <div class="card">
+                                    <div class="card-body">
+                                      TODO: Fill in Workout 2
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class = "col-4">
+                                <div class="card">
+                                    <div class="card-body">
+                                      TODO: Add Workout
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    
 
                 </div>
 
