--- a/client/public/matchHistory.html
+++ b/client/public/matchHistory.html
@@ -24,13 +24,14 @@
                         src="https://cdn-icons-png.flaticon.com/512/1053/1053916.png"
                         alt="company logo"
                 /></a>
+                
+                <div class="input-group w-25 p-3">
+                    <input type="text" class="form-control" placeholder="Search Name e.g. Taylor Swift">
+                    <div class="input-group-append">
+                        <button class="btn btn-primary" type="button">Search</button>
+                    </div>
+                </div>
 
-                    <form>
-                        <!-- I do not know why this the search button is doing that thing -->
-                        <label class="form-label" for="search"> Search</label>
-                        <input type="text" id="search" class="form-control" placeholder="Search Name e.g. Taylor Swift" />
-                        <button class="btn btn-primary" type="submit" id="textbox">Search</button>
-                    </form>
             </div>
         </nav>
     </div>
