--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>super epic</title>
+		<title>Home - UFit</title>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -46,7 +46,10 @@
 								<a class="dropdown-item" href="#">Profile</a>
 							</li>
 							<li>
-								<a class="dropdown-item" href="#">Settings</a>
+								<a class="dropdown-item" href="#">Matches</a>
+							</li>
+							<li>
+								<a class="dropdown-item" href="#">Logout</a>
 							</li>
 						</ul>
 					</div>
