--- a/client/public/profilePage.html
+++ b/client/public/profilePage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -45,110 +45,283 @@
 						</li>
 					</ul>
 				</div>
-				<!-- Only one of these shows at once -->
-				<!-- <button class="btn btn-outline-success">Login</button> -->
 			</div>
 		</nav>
 		<h1 class="title">My UFit Profile</h1>
-		<div class="container-fluid mt-5 w-75">
-            <div class="row align-items-center">
-                <div class="col-2 text-center">
-                    <label for="inputFirstName">First Name:</label>
-                </div>
-                <div class="col-4">
-                    <input type="text" class="form-control" id="inputFirstName" placeholder="Taylor" readonly="true">
-                </div>
-                <div class="col">
-                    <label for="inputLastName">Last Name:</label>
-                </div>
-                <div class="col-5">
-                    <input type="text" class="form-control" id="inputLastName" placeholder="Swift" readonly="true">
-                </div>
-            </div>
-            <div class="row align-items-center mt-3">
-                <div class="col text-center">
-                    <button
-                        class="btn btn-outline-secondary"
-                        type="button"
-                        id="editProfile"
-                        disabled
-                    >
-                        Select Profile Picture
-					</button>
-                </div>
-            </div>
-            <div class="row align-items-center mt-3">
-                <div class="col-2 text-center">
-                    <label for="inputPhoneNumber">Phone Number:</label>
-                </div>
-                <div class="col">
-                    <input type="text" class="form-control" id="inputPhoneNumber" placeholder="978-8677-309" readonly="true">
-                </div>
-            </div>
-            <div class="row align-items-center mt-3">
-                <div class="col-2 text-center">
-                    <label for="inputWorkoutStyle">Workout Style:</label>
-                </div>
-                <div class="col">
-                    <input type="text" class="form-control" id="inputWorkoutStyle" placeholder="Push-Pull-Leg Split" readonly="true">
-                </div>
-            </div>
-            <div class="row align-items-center mt-3">
-                <div class="col-2 text-center">
-                    <label for="inputWorkoutFrequency">Workouts Per Week:</label>
-                </div>
-                <div class="col">
-                    <select class="form-select" aria-label="selectFrequency" aria-readonly="true" id="inputWorkoutFrequency" disabled>
-                        <option selected value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                        <option value="4">Four</option>
-                        <option value="5">Five</option>
-                        <option value="6">Six</option>
-                        <option value="7">Seven</option>
-                    </select>
-                </div>
-            </div>
-            <div class="row align-items-center mt-3">
-                <div class="col-2 text-center">
-                    <label for="inputWorkoutLength">Average Workout Length:</label>
-                </div>
-                <div class="col">
-                    <input type="text" class="form-control" id="inputWorkoutLength" placeholder="2 Hours" readonly="true">
-                </div>
-            </div>
-            <div class="row align-items-center mt-3">
-                <div class="col-2 text-center">
-                    <label for="inputTimePreference">Preferred Time of Day:</label>
-                </div>
-                <div class="col">
-                    <input type="text" class="form-control" id="inputTimePreference" placeholder="10 AM - 12 PM" readonly="true">
-                </div>
-            </div>
-            <div class="row align-items-center mt-3">
-                <div class="col text-center">
-                    <button
-                        class="btn btn-success"
-                        type="button"
-                        id="editProfile"
-                    >
-                        Edit Profile
-					</button>
-                </div>
-            </div>
-            <div class="row align-items-center mt-3">
-                <div class="col text-center">
-                    <button
-                        class="btn btn-outline-success"
-                        type="button"
-                        id="updateProfile"
-                        disabled
-                    >
-                        Update
-					</button>
-                </div>
-            </div>
-        </div>
+		<!--Please note that fields are left as readonly/disabled to indicate that the profile is currently not-editable. 
+            The edit-profile button will allow for these fields to become active once functionality is implemented-->
+		<main>
+			<div class="container-fluid mt-5 w-75">
+				<div class="row align-items-center">
+					<div class="col-2 text-center">
+						<label for="inputFirstName">First Name:</label>
+					</div>
+					<div class="col-4">
+						<input
+							type="text"
+							class="form-control"
+							id="inputFirstName"
+							placeholder="Taylor"
+							readonly="readonly"
+						/>
+					</div>
+					<div class="col">
+						<label for="inputLastName">Last Name:</label>
+					</div>
+					<div class="col-5">
+						<input
+							type="text"
+							class="form-control"
+							id="inputLastName"
+							placeholder="Swift"
+							readonly="readonly"
+						/>
+					</div>
+				</div>
+				<div class="row align-items-center mt-3">
+					<div class="col text-center">
+						<button
+							class="btn btn-outline-secondary"
+							type="button"
+							id="selectProfilePicture"
+							disabled
+						>
+							Select Profile Picture
+						</button>
+					</div>
+				</div>
+				<div class="row align-items-center mt-3">
+					<div class="col-2 text-center">
+						<label for="inputPhoneNumber">Phone Number:</label>
+					</div>
+					<div class="col">
+						<input
+							type="text"
+							class="form-control"
+							id="inputPhoneNumber"
+							placeholder="978-8677-309"
+							readonly="readonly"
+						/>
+					</div>
+				</div>
+				<div class="row align-items-center mt-3">
+					<div class="col-2 text-center">
+						<label for="inputWorkoutStyle">Workout Style:</label>
+					</div>
+					<div class="col">
+						<input
+							type="text"
+							class="form-control"
+							id="inputWorkoutStyle"
+							placeholder="Push-Pull-Leg Split"
+							readonly="readonly"
+						/>
+					</div>
+				</div>
+				<div class="row align-items-center mt-3">
+					<div class="col-2 text-center">
+						<label for="inputWorkoutFrequency"
+							>Workouts Per Week:</label
+						>
+					</div>
+					<div class="col">
+						<select
+							class="form-select"
+							aria-label="selectFrequency"
+							aria-readonly="true"
+							id="inputWorkoutFrequency"
+							disabled
+						>
+							<option selected value="1">One</option>
+							<option value="2">Two</option>
+							<option value="3">Three</option>
+							<option value="4">Four</option>
+							<option value="5">Five</option>
+							<option value="6">Six</option>
+							<option value="7">Seven</option>
+						</select>
+					</div>
+				</div>
+				<div class="row align-items-center mt-3">
+					<div class="col-2 text-center">
+						<label for="inputWorkoutLength"
+							>Average Workout Length:</label
+						>
+					</div>
+					<div class="col">
+						<input
+							type="text"
+							class="form-control"
+							id="inputWorkoutLength"
+							placeholder="2 Hours"
+							readonly="readonly"
+						/>
+					</div>
+				</div>
+				<div class="row align-items-center mt-3">
+					<div class="col-2 text-center">
+						<label for="inputTimePreference"
+							>Preferred Time of Day:</label
+						>
+					</div>
+					<div class="col">
+						<input
+							type="text"
+							class="form-control"
+							id="inputTimePreference"
+							placeholder="10 AM - 12 PM"
+							readonly="readonly"
+						/>
+					</div>
+				</div>
+
+				<div class="row align-items-center mt-3">
+					<div class="col-2 text-center">Preferred Days:</div>
+					<div class="col">
+						<div class="form-check">
+							<input
+								class="form-check-input"
+								type="checkbox"
+								value=""
+								id="mondayCheckbox"
+								disabled
+							/>
+							<label
+								class="form-check-label"
+								for="mondayCheckbox"
+							>
+								Monday
+							</label>
+						</div>
+					</div>
+					<div class="col">
+						<div class="form-check">
+							<input
+								class="form-check-input"
+								type="checkbox"
+								value=""
+								id="tuesdayCheckbox"
+								disabled
+							/>
+							<label
+								class="form-check-label"
+								for="tuesdayCheckbox"
+							>
+								Tuesday
+							</label>
+						</div>
+					</div>
+					<div class="col">
+						<div class="form-check">
+							<input
+								class="form-check-input"
+								type="checkbox"
+								value=""
+								id="wednesdayCheckbox"
+								disabled
+							/>
+							<label
+								class="form-check-label"
+								for="wednesdayCheckbox"
+							>
+								Wednesday
+							</label>
+						</div>
+					</div>
+					<div class="col">
+						<div class="form-check">
+							<input
+								class="form-check-input"
+								type="checkbox"
+								value=""
+								id="thursdayCheckbox"
+								disabled
+							/>
+							<label
+								class="form-check-label"
+								for="thursdayCheckbox"
+							>
+								Thursday
+							</label>
+						</div>
+					</div>
+					<div class="col">
+						<div class="form-check">
+							<input
+								class="form-check-input"
+								type="checkbox"
+								value=""
+								id="fridayCheckbox"
+								disabled
+							/>
+							<label
+								class="form-check-label"
+								for="fridayCheckbox"
+							>
+								Friday
+							</label>
+						</div>
+					</div>
+					<div class="col">
+						<div class="form-check">
+							<input
+								class="form-check-input"
+								type="checkbox"
+								value=""
+								id="saturdayCheckbox"
+								disabled
+							/>
+							<label
+								class="form-check-label"
+								for="saturdayCheckbox"
+							>
+								Saturday
+							</label>
+						</div>
+					</div>
+					<div class="col">
+						<div class="form-check">
+							<input
+								class="form-check-input"
+								type="checkbox"
+								value=""
+								id="sundayCheckbox"
+								disabled
+							/>
+							<label
+								class="form-check-label"
+								for="sundayCheckbox"
+							>
+								Sunday
+							</label>
+						</div>
+					</div>
+				</div>
+
+				<div class="row align-items-center mt-3">
+					<div class="col text-center">
+						<button
+							class="btn btn-success"
+							type="button"
+							id="editProfile"
+						>
+							Edit Profile
+						</button>
+					</div>
+				</div>
+				<div class="row align-items-center mt-3">
+					<div class="col text-center">
+						<button
+							class="btn btn-outline-success"
+							type="button"
+							id="updateProfile"
+							disabled
+						>
+							Update
+						</button>
+					</div>
+				</div>
+			</div>
 		</main>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
