Fixed accidental comment removal

--- a/client/public/profilePage.html
+++ b/client/public/profilePage.html
@@ -45,6 +45,8 @@
 						</li>
 					</ul>
 				</div>
+				<!-- Only one of these shows at once -->
+				<!-- <button class="btn btn-outline-success">Login</button> -->
 			</div>
 		</nav>
 		<h1 class="title">My UFit Profile</h1>
