Fixed all elements collapsing at the same time

--- a/client/public/matchHistory.html
+++ b/client/public/matchHistory.html
@@ -196,9 +196,9 @@
 						class="accordion-button"
 						type="button"
 						data-bs-toggle="collapse"
-						data-bs-target="#collapseOne"
+						data-bs-target="#collapseTwo"
 						aria-expanded="true"
-						aria-controls="collapseOne"
+						aria-controls="collapseTwo"
 					>
 						<div class="container-fluid">
 							<div class="row align-items-center">
@@ -225,8 +225,8 @@
 					</button>
 				</h2>
 				<div
-					id="collapseOne"
-					class="accordion-collapse collapse show"
+					id="collapseTwo"
+					class="accordion-collapse collapse"
 					aria-labelledby="matchTwo"
 					data-bs-parent="#accordionExample"
 				>
@@ -343,9 +343,9 @@
 						class="accordion-button"
 						type="button"
 						data-bs-toggle="collapse"
-						data-bs-target="#collapseOne"
+						data-bs-target="#collapseThree"
 						aria-expanded="true"
-						aria-controls="collapseOne"
+						aria-controls="collapseThree"
 					>
 						<div class="container-fluid">
 							<div class="row align-items-center">
@@ -372,8 +372,8 @@
 					</button>
 				</h2>
 				<div
-					id="collapseOne"
-					class="accordion-collapse collapse show"
+					id="collapseThree"
+					class="accordion-collapse collapse"
 					aria-labelledby="matchThree"
 					data-bs-parent="#accordionExample"
 				>
@@ -490,9 +490,9 @@
 						class="accordion-button"
 						type="button"
 						data-bs-toggle="collapse"
-						data-bs-target="#collapseOne"
+						data-bs-target="#collapseFour"
 						aria-expanded="true"
-						aria-controls="collapseOne"
+						aria-controls="collapseFour"
 					>
 						<div class="container-fluid">
 							<div class="row align-items-center">
@@ -519,8 +519,8 @@
 					</button>
 				</h2>
 				<div
-					id="collapseOne"
-					class="accordion-collapse collapse show"
+					id="collapseFour"
+					class="accordion-collapse collapse"
 					aria-labelledby="matchFour"
 					data-bs-parent="#accordionExample"
 				>
@@ -637,9 +637,9 @@
 						class="accordion-button"
 						type="button"
 						data-bs-toggle="collapse"
-						data-bs-target="#collapseOne"
+						data-bs-target="#collapseFive"
 						aria-expanded="true"
-						aria-controls="collapseOne"
+						aria-controls="collapseFive"
 					>
 						<div class="container-fluid">
 							<div class="row align-items-center">
@@ -666,8 +666,8 @@
 					</button>
 				</h2>
 				<div
-					id="collapseOne"
-					class="accordion-collapse collapse show"
+					id="collapseFive"
+					class="accordion-collapse collapse"
 					aria-labelledby="matchFive"
 					data-bs-parent="#accordionExample"
 				>
@@ -781,8 +781,11 @@
 
         <div class="container">
             <div class="row">
-              <div class="col text-center">
-                <button class="btn btn-primary center" type="button"> Next</button>
+              <div class="col text-center mb-2">
+                <button class="btn btn-primary" type="button"> Previous</button>
+              </div>
+              <div class="col text-center mb-2">
+                <button class="btn btn-primary" type="button"> Next</button>
               </div>
             </div>
           </div>
