added language and added alt to img tag

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -71,7 +71,7 @@
 				<img
 					class="info-pic"
 					src="https://cdn-icons-png.flaticon.com/512/3412/3412862.png"
-					rel="dumbbell"
+					alt="dumbbell"
 				/>
 			</div>
 		</section>
