Fixed invalid html and updated site titles

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -46,10 +46,7 @@
 								<a class="dropdown-item" href="#">Profile</a>
 							</li>
 							<li>
-								<a class="dropdown-item" href="#">Matches</a>
-							</li>
-							<li>
-								<a class="dropdown-item" href="#">Logout</a>
+								<a class="dropdown-item" href="#">Settings</a>
 							</li>
 						</ul>
 					</div>
@@ -74,6 +71,7 @@
 				<img
 					class="info-pic"
 					src="https://cdn-icons-png.flaticon.com/512/3412/3412862.png"
+					rel="dumbbell"
 					alt="dumbbell"
 				/>
 			</div>
@@ -84,7 +82,7 @@
 				<img
 					class="info-pic"
 					src="https://www.freepnglogos.com/uploads/star-png/star-vector-png-transparent-image-pngpix-21.png"
-					alt="start"
+					alt="star"
 				/>
 				<p class="info-text">
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
