--- a/client/public/login.html
+++ b/client/public/login.html
@@ -77,7 +77,8 @@
 				/><br />
 			</form>
 			<p>Forgot Password?</p>
-			<button type="button" class="btn btn-primary">Login</button>
+			<button type="button" class="btn btn-primary" id="login">Login</button>
+			<button type="button" class="btn btn-primary" id="signup">Sign Up</button>
 		</div>
 
 		<script
