implemented basic functionality for homepage and login page scripts

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -34,7 +34,7 @@
 							<a class="nav-link" href="#">Why us</a>
 						</li>
 					</ul>
-					<div class="dropdown">
+					<!-- <div class="dropdown">
 						<img
 							class="user-icon dropdown-toggle"
 							data-bs-toggle="dropdown"
@@ -49,9 +49,11 @@
 								<a class="dropdown-item" href="#">Settings</a>
 							</li>
 						</ul>
-					</div>
+					</div> -->
 					<!-- Only one of these shows at once -->
-					<!-- <button class="btn btn-outline-success">Login</button> -->
+					<button id="login-btn" class="btn btn-outline-success">
+						Login
+					</button>
 				</div>
 			</nav>
 		</div>
@@ -119,5 +121,6 @@
 			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
 			crossorigin="anonymous"
 		></script>
+		<script src="/src/homepage.js"></script>
 	</body>
 </html>
