--- a/client/public/login.html
+++ b/client/public/login.html
@@ -77,8 +77,12 @@
 				/><br />
 			</form>
 			<p>Forgot Password?</p>
-			<button type="button" class="btn btn-primary" id="login">Login</button>
-			<button type="button" class="btn btn-primary" id="signup">Sign Up</button>
+			<button type="button" class="btn btn-primary" id="login">
+				Login
+			</button>
+			<button type="button" class="btn btn-primary" id="signup">
+				Sign Up
+			</button>
 		</div>
 
 		<script
@@ -86,5 +90,6 @@
 			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
 			crossorigin="anonymous"
 		></script>
+		<script src="/src/login.js"></script>
 	</body>
 </html>
