added basic auth flow

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,10 @@
 			integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
 			crossorigin="anonymous"
 		/>
-		<link href="stylesheet.css" rel="stylesheet" />
+		<link
+			href="http://localhost:3000/public/stylesheet.css"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<div>
