--- a/client/public/login.html
+++ b/client/public/login.html
@@ -11,7 +11,10 @@
 			integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
 			crossorigin="anonymous"
 		/>
-		<link href="stylesheet.css" rel="stylesheet" />
+		<link
+			href="http://localhost:3000/public/stylesheet.css"
+			rel="stylesheet"
+		/>
 	</head>
 
 	<body id="login">
@@ -76,6 +79,9 @@
 					placeholder="Password"
 				/><br />
 			</form>
+			<p id="error-text" hidden="true">
+				Invalid email/password combination
+			</p>
 			<p>Forgot Password?</p>
 			<button type="button" class="btn btn-primary" id="login">
 				Login
