hooked up buttons on landing page and removed profile header from login page ???

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -16,7 +16,7 @@
 		<div>
 			<nav class="navbar navbar-dark navbar-expand-lg bg-dark">
 				<div id="nav" class="container-fluid">
-					<a class="navbar-brand" href="#"
+					<a class="navbar-brand" href="/public"
 						><img
 							class="company-logo"
 							src="https://cdn-icons-png.flaticon.com/512/1053/1053916.png"
@@ -25,13 +25,13 @@
 
 					<ul class="nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link" href="#">Rating System</a>
+							<a class="nav-link" href="#rating">Rating System</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">How it works</a>
+							<a class="nav-link" href="#how">How it works</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Why us</a>
+							<a class="nav-link" href="#why">Why us</a>
 						</li>
 					</ul>
 					<!-- <div class="dropdown">
@@ -58,7 +58,7 @@
 			</nav>
 		</div>
 		<main class="homepage"></main>
-		<section class="info-sec">
+		<section id="why" class="info-sec">
 			<h2 class="info-title">UFit</h2>
 			<div class="info">
 				<p class="info-text">
@@ -78,7 +78,7 @@
 				/>
 			</div>
 		</section>
-		<section class="info-sec">
+		<section id="rating" class="info-sec">
 			<h2 class="info-title">Rating System</h2>
 			<div class="info">
 				<img
@@ -97,7 +97,7 @@
 				</p>
 			</div>
 		</section>
-		<section class="info-sec">
+		<section id="how" class="info-sec">
 			<h2 class="info-title">How It Works</h2>
 			<div class="info">
 				<p class="info-text">
