Updated profile page

--- a/client/public/profilePage.html
+++ b/client/public/profilePage.html
@@ -53,7 +53,7 @@
 		<!--Please note that fields are left as readonly/disabled to indicate that the profile is currently not-editable. 
             The edit-profile button will allow for these fields to become active once functionality is implemented-->
 		<main>
-			<div class="container-fluid mt-5 w-75">
+			<div class="container-fluid mt-5 w-75" id="profileContainer">
 				<div class="row align-items-center">
 					<div class="col-2 text-center">
 						<label for="inputFirstName">First Name:</label>
@@ -330,5 +330,6 @@
 			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
 			crossorigin="anonymous"
 		></script>
+		<script src="../src/profilePage.js"></script>
 	</body>
 </html>
