Implemented api calls and added delete button

--- a/client/public/profilePage.html
+++ b/client/public/profilePage.html
@@ -330,6 +330,6 @@
 			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
 			crossorigin="anonymous"
 		></script>
-		<script src="../src/profilePage.js"></script>
+		<script src="/src/profilePage.js"></script>
 	</body>
 </html>
