Cleaning up Index.html and api for Match History

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -69,10 +69,33 @@
 										<button
 											class="btn btn-danger"
 											type="button"
-											id="reportOne"
+											id="report1"
+											data-bs-toggle="modal" 
+											data-bs-target="#reporting1"
 										>
 											Report Partner
 										</button>
+										<div class="modal" id="reporting1">
+											<div class="modal-dialog">
+											  <div class="modal-content">
+												<div class="modal-header">
+												  <h4 class="modal-title">What's the Reason?</h4>
+												  <button type="button" class="close" data-bs-dismiss="modal">&times;</button>
+												</div>	
+												<form>													  
+													<div class="modal-body">																		
+														<div class="form-group">
+															<label for="reportText1"> Tell Us Why So We can Help You</label>
+    														<textarea class="form-control" id="report1" rows="3"></textarea>
+														</div>
+													</div>														  
+													<div class="modal-footer">
+														<button type="button" class="btn btn-danger" data-bs-dismiss="modal">Confirm</button>
+													</div>
+												</form>
+											  </div>
+											</div>
+										</div>	
 										<br /><br />
 										<button
 											class="btn btn-danger"
@@ -264,10 +287,33 @@
 										<button
 											class="btn btn-danger"
 											type="button"
-											id="reportTwo"
+											id="report2"
+											data-bs-toggle="modal" 
+											data-bs-target="#reporting2"
 										>
 											Report Partner
 										</button>
+										<div class="modal" id="reporting2">
+											<div class="modal-dialog">
+											  <div class="modal-content">
+												<div class="modal-header">
+												  <h4 class="modal-title">What's the Reason?</h4>
+												  <button type="button" class="close" data-bs-dismiss="modal">&times;</button>
+												</div>	
+												<form>													  
+													<div class="modal-body">																		
+														<div class="form-group">
+															<label for="reportText2"> Tell Us Why So We can Help You</label>
+    														<textarea class="form-control" id="reportText2" rows="3"></textarea>
+														</div>
+													</div>														  
+													<div class="modal-footer">
+														<button type="button" class="btn btn-danger" data-bs-dismiss="modal">Confirm</button>
+													</div>
+												</form>
+											  </div>
+											</div>
+										</div>
 										<br /><br />
 										<button
 											class="btn btn-danger"
@@ -447,10 +493,33 @@
 										<button
 											class="btn btn-danger"
 											type="button"
-											id="reportThree"
+											id="report3"
+											data-bs-toggle="modal" 
+											data-bs-target="#reporting3"
 										>
 											Report Partner
 										</button>
+										<div class="modal" id="reporting3">
+											<div class="modal-dialog">
+											  <div class="modal-content">
+												<div class="modal-header">
+												  <h4 class="modal-title">What's the Reason?</h4>
+												  <button type="button" class="close" data-bs-dismiss="modal">&times;</button>
+												</div>	
+												<form>													  
+													<div class="modal-body">																		
+														<div class="form-group">
+															<label for="reportText3"> Tell Us Why So We can Help You</label>
+    														<textarea class="form-control" id="reportText3" rows="3"></textarea>
+														</div>
+													</div>														  
+													<div class="modal-footer">
+														<button type="button" class="btn btn-danger" data-bs-dismiss="modal">Confirm</button>
+													</div>
+												</form>
+											  </div>
+											</div>
+										</div>
 										<br /><br />
 										<button
 											class="btn btn-danger"
