--- a/server/public/login.html
+++ b/server/public/login.html
@@ -50,6 +50,6 @@
 			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
 			crossorigin="anonymous"
 		></script>
-		<script src="./src/login.js"></script>
+		<script src="./src/login.js" type="module"></script>
 	</body>
 </html>
