Polished matching and profilePage

--- a/server/public/profilePage.html
+++ b/server/public/profilePage.html
@@ -35,6 +35,11 @@
 					/>
 					<ul class="dropdown-menu">
 						<li>
+							<a class="dropdown-item" href="matchingPage.html"
+								>Find A Fit</a
+							>
+						</li>
+						<li>
 							<a class="dropdown-item" href="#" id="matchesOption"
 								>Matches</a
 							>
@@ -365,6 +370,6 @@
 			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
 			crossorigin="anonymous"
 		></script>
-		<script src="./src/profilePage.js"></script>
+		<script type="module" src="./src/profilePage.js"></script>
 	</body>
 </html>
