Polish profile and matching page

--- a/server/public/matchingPage.html
+++ b/server/public/matchingPage.html
@@ -69,10 +69,12 @@
 					type="button"
 					data-bs-target="#carouselExampleIndicators"
 					data-bs-slide="prev"
+					id="prevButton"
 				>
 					<span
 						class="carousel-control-prev-icon"
 						aria-hidden="true"
+						id="prevButtonIcon"
 					></span>
 					<span class="visually-hidden">Previous</span>
 				</button>
@@ -81,10 +83,12 @@
 					type="button"
 					data-bs-target="#carouselExampleIndicators"
 					data-bs-slide="next"
+					id="nextButton"
 				>
 					<span
 						class="carousel-control-next-icon"
 						aria-hidden="true"
+						id="nextButtonIcon"
 					></span>
 					<span class="visually-hidden">Next</span>
 				</button>
@@ -95,6 +99,6 @@
 			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
 			crossorigin="anonymous"
 		></script>
-		<script src="./src/matchingPage.js"></script>
+		<script type="module" src="./src/matchingPage.js"></script>
 	</body>
 </html>
