--- a/server/public/matchHistory.html
+++ b/server/public/matchHistory.html
@@ -17,7 +17,7 @@
 		<div>
 			<nav class="navbar navbar-dark navbar-expand-lg bg-dark">
 				<div class="container-fluid">
-					<a class="navbar-brand" href="#"
+					<a class="navbar-brand" href="index.html"
 						><img
 							class="company-logo"
 							src="https://cdn-icons-png.flaticon.com/512/1053/1053916.png"
