Profile picture got from api

--- a/server/public/matchingPage.html
+++ b/server/public/matchingPage.html
@@ -30,12 +30,13 @@
 					<img
 						class="user-icon dropdown-toggle"
 						data-bs-toggle="dropdown"
-						src="https://penntoday.upenn.edu/sites/default/files/2021-11/Taylor%20Swift-Main.jpg"
+						id="profilePicture"
+						src="https://cdn.vectorstock.com/i/preview-1x/23/81/default-avatar-profile-icon-vector-18942381.jpg"
 						alt="user icon"
 					/>
 					<ul class="dropdown-menu">
 						<li>
-							<a class="dropdown-item" href="profilePage.html"
+							<a class="dropdown-item" href="profile.html"
 								>Profile</a
 							>
 						</li>
