--- a/server/public/profile.html
+++ b/server/public/profile.html
@@ -30,7 +30,8 @@
 					<img
 						class="user-icon dropdown-toggle"
 						data-bs-toggle="dropdown"
-						src="https://penntoday.upenn.edu/sites/default/files/2021-11/Taylor%20Swift-Main.jpg"
+						id="profilePicture"
+						src="https://cdn.vectorstock.com/i/preview-1x/23/81/default-avatar-profile-icon-vector-18942381.jpg"
 						alt="user icon"
 					/>
 					<ul class="dropdown-menu">
@@ -370,6 +371,6 @@
 			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
 			crossorigin="anonymous"
 		></script>
-		<script type="module" src="./src/profilePage.js"></script>
+		<script type="module" src="./src/profile.js"></script>
 	</body>
 </html>
