Finished login html fix

--- a/server/public/login.html
+++ b/server/public/login.html
@@ -42,7 +42,6 @@
 			<br>
 			<br>
 			<button type="button"  class="text-primary" id="signupToggle" data-bs-toggle="modal" data-bs-target="#signupForm">Don't Have an Account? Make One!</button>
-			
 			<div class="modal" id="signupForm">
 				<div class="modal-dialog">
 				  <div class="modal-content">
@@ -53,6 +52,20 @@
 					</div>														  
 						<div class="modal-body">																		
 							<div class="form-group">
+								<label for="firstName" class="form-label">First Name:</label>
+								<input
+									type="text"
+									id="firstName"
+									class="form-control"
+									placeholder="Name"
+								/><br />
+								<label for="lastName" class="form-label">First Name:</label>
+								<input
+									type="text"
+									id="lastName"
+									class="form-control"
+									placeholder="Last Name"
+								/><br />
 								<label for="newEmail" class="form-label">Enter Email:</label>
 								<input
 									type="email"
