MatchHistory no longer reliant on refresh or local storage

--- a/server/public/matchHistory.html
+++ b/server/public/matchHistory.html
@@ -23,7 +23,32 @@
 							src="https://cdn-icons-png.flaticon.com/512/1053/1053916.png"
 							alt="company logo"
 					/></a>
-
+					<div class="dropdown">
+						<img
+							class="user-icon dropdown-toggle"
+							data-bs-toggle="dropdown"
+							id="profilePicture"
+							src="https://cdn.vectorstock.com/i/preview-1x/23/81/default-avatar-profile-icon-vector-18942381.jpg"
+							alt="user icon"
+						/>
+						<ul class="dropdown-menu">
+							<li>
+								<a class="dropdown-item" href="profile.html"
+									>Profile</a
+								>
+							</li>
+							<li>
+								<a class="dropdown-item" href="matchHistory.html"
+									>Matches</a
+								>
+							</li>
+							<li>
+								<a class="dropdown-item" href="#" id="logoutOption"
+									>Logout</a
+								>
+							</li>
+						</ul>
+					</div>
 					
 				</div>
 			</nav>
