Adding backend functionality to profile and match

--- a/server/public/profile.html
+++ b/server/public/profile.html
@@ -149,6 +149,7 @@
 						/>
 					</div>
 				</div>
+
 				<div class="row align-items-center mt-3">
 					<div class="col-2 text-center">
 						<label for="inputWorkoutFrequency"
@@ -190,7 +191,7 @@
 					</div>
 				</div>
 				<div class="row align-items-center mt-3">
-					<div class="col-2 text-center">
+					<!-- <div class="col-2 text-center">
 						<label for="inputTimePreference"
 							>Preferred Time of Day:</label
 						>
@@ -203,6 +204,30 @@
 							placeholder="10 AM - 12 PM"
 							readonly="readonly"
 						/>
+					</div> -->
+
+					<div class="row align-items-center mt-1">
+						<div class="col text-center">
+							<label> Preferred Time of Day: </label>
+						</div>
+					</div>
+					<div class="row align-items-center mt-3">
+						<div class="col text-center">
+							<label for="startTime">Start Time:</label>
+							<input
+								type="time"
+								id="startTime"
+								name="startTime"
+								disabled="true"
+							/>
+							<label for="endTime">End Time:</label>
+							<input
+								type="time"
+								id="endTime"
+								name="endTime"
+								disabled="true"
+							/>
+						</div>
 					</div>
 				</div>
 
