Added find a fit button to homepage

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -58,6 +58,18 @@
 			</nav>
 		</div>
 		<main class="homepage"></main>
+		<div class="row mt-2 mb-2 align-items-center">
+			<div class="col text-center">
+				<button
+					class="btn btn-success btn-lg"
+					id="findAFitLargeButton"
+					disabled="true"
+				>
+					Find A Fit!
+				</button>
+			</div>
+		</div>
+
 		<section id="why" class="info-sec">
 			<h2 class="info-title">UFit</h2>
 			<div class="info">
