Fixing matchHistory html

--- a/server/public/matchHistory.html
+++ b/server/public/matchHistory.html
@@ -38,8 +38,8 @@
 								>
 							</li>
 							<li>
-								<a class="dropdown-item" href="matchHistory.html"
-									>Matches</a
+								<a class="dropdown-item" href="matchingPage.html"
+									>Find A Fit</a
 								>
 							</li>
 							<li>
@@ -90,37 +90,7 @@
 						<div class="container-fluid">
 							<div class="row">
 								<div class="col-2 text-center">
-									<div class="card-body">
-										<button
-											class="btn btn-danger"
-											type="button"
-											id="report1"
-											data-bs-toggle="modal" 
-											data-bs-target="#reporting1"
-										>
-											Report Partner
-										</button>
-										<div class="modal" id="reporting1">
-											<div class="modal-dialog">
-											  <div class="modal-content">
-												<div class="modal-header">
-												  <h4 class="modal-title">What's the Reason?</h4>
-												  <button type="button" class="close" data-bs-dismiss="modal">&times;</button>
-												</div>	
-												<form>													  
-													<div class="modal-body">																		
-														<div class="form-group">
-															<label for="reportText1"> Tell Us Why So We can Help You</label>
-    														<textarea class="form-control" id="report1" rows="3"></textarea>
-														</div>
-													</div>														  
-													<div class="modal-footer">
-														<button type="button" class="btn btn-danger" data-bs-dismiss="modal">Confirm</button>
-													</div>
-												</form>
-											  </div>
-											</div>
-										</div>	
+									<div class="card-body">	
 										<br /><br />
 										<button
 											class="btn btn-danger"
@@ -201,6 +171,7 @@
 												id="selectRating1"
 											>
 											</select>
+											<br>
 											<button type="button" id ="updateRating1" class="btn btn-success">Update</button>
 									</div>
 								</div>
@@ -309,36 +280,7 @@
 									class="col-2 text-center align-self-center"
 								>
 									<div class="card-body">
-										<button
-											class="btn btn-danger"
-											type="button"
-											id="report2"
-											data-bs-toggle="modal" 
-											data-bs-target="#reporting2"
-										>
-											Report Partner
-										</button>
-										<div class="modal" id="reporting2">
-											<div class="modal-dialog">
-											  <div class="modal-content">
-												<div class="modal-header">
-												  <h4 class="modal-title">What's the Reason?</h4>
-												  <button type="button" class="close" data-bs-dismiss="modal">&times;</button>
-												</div>	
-												<form>													  
-													<div class="modal-body">																		
-														<div class="form-group">
-															<label for="reportText2"> Tell Us Why So We can Help You</label>
-    														<textarea class="form-control" id="reportText2" rows="3"></textarea>
-														</div>
-													</div>														  
-													<div class="modal-footer">
-														<button type="button" class="btn btn-danger" data-bs-dismiss="modal">Confirm</button>
-													</div>
-												</form>
-											  </div>
-											</div>
-										</div>
+										
 										<br /><br />
 										<button
 											class="btn btn-danger"
@@ -405,6 +347,7 @@
 											id="selectRating2"
 										>
 										</select>
+										<br>
 										<button type="button" id ="updateRating2" class="btn btn-success">Update</button>
 									</div>
 								</div>
@@ -515,36 +458,6 @@
 									class="col-2 text-center align-self-center"
 								>
 									<div class="card-body">
-										<button
-											class="btn btn-danger"
-											type="button"
-											id="report3"
-											data-bs-toggle="modal" 
-											data-bs-target="#reporting3"
-										>
-											Report Partner
-										</button>
-										<div class="modal" id="reporting3">
-											<div class="modal-dialog">
-											  <div class="modal-content">
-												<div class="modal-header">
-												  <h4 class="modal-title">What's the Reason?</h4>
-												  <button type="button" class="close" data-bs-dismiss="modal">&times;</button>
-												</div>	
-												<form>													  
-													<div class="modal-body">																		
-														<div class="form-group">
-															<label for="reportText3"> Tell Us Why So We can Help You</label>
-    														<textarea class="form-control" id="reportText3" rows="3"></textarea>
-														</div>
-													</div>														  
-													<div class="modal-footer">
-														<button type="button" class="btn btn-danger" data-bs-dismiss="modal">Confirm</button>
-													</div>
-												</form>
-											  </div>
-											</div>
-										</div>
 										<br /><br />
 										<button
 											class="btn btn-danger"
@@ -609,6 +522,7 @@
 											id="selectRating3"
 										>									
 										</select>
+										<br>
 										<button type="button" id ="updateRating3" class="btn btn-success">Update</button>
 									</div>
 								</div>
