--- a/server/public/matchingPage.html
+++ b/server/public/matchingPage.html
@@ -26,7 +26,7 @@
 						alt="company logo"
 				/></a>
 
-				<div class="dropdown">
+				<div class="dropdown" id="dropdown">
 					<img
 						class="user-icon dropdown-toggle"
 						data-bs-toggle="dropdown"
@@ -95,6 +95,9 @@
 				</button>
 			</div>
 		</main>
+		<footer class="footer">
+			<small class="copyright-text">&copy; Copyright 2022, UFit</small>
+		</footer>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
