fixed loading profile dropdown for all pages and refactored logout option

--- a/server/public/matchingPage.html
+++ b/server/public/matchingPage.html
@@ -19,41 +19,12 @@
 	<body>
 		<nav class="navbar navbar-dark navbar-expand-lg bg-dark">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="index.html"
+				<a class="navbar-brand" href="index.html" id="logo"
 					><img
 						class="company-logo"
 						src="https://cdn-icons-png.flaticon.com/512/1053/1053916.png"
 						alt="company logo"
 				/></a>
-
-				<div class="dropdown" id="dropdown">
-					<img
-						class="user-icon dropdown-toggle"
-						data-bs-toggle="dropdown"
-						id="profilePicture"
-						src="https://cdn.vectorstock.com/i/preview-1x/23/81/default-avatar-profile-icon-vector-18942381.jpg"
-						alt="user icon"
-					/>
-					<ul class="dropdown-menu">
-						<li>
-							<a class="dropdown-item" href="profile.html"
-								>Profile</a
-							>
-						</li>
-						<li>
-							<a class="dropdown-item" href="matchHistory.html"
-								>Matches</a
-							>
-						</li>
-						<li>
-							<a class="dropdown-item" href="#" id="logoutOption"
-								>Logout</a
-							>
-						</li>
-					</ul>
-				</div>
-				<!-- Only one of these shows at once -->
-				<!-- <button class="btn btn-outline-success">Login</button> -->
 			</div>
 		</nav>
 		<h1 class="title">Find a Fit!</h1>
