--- a/server/public/profile.html
+++ b/server/public/profile.html
@@ -19,42 +19,12 @@
 	<body>
 		<nav class="navbar navbar-dark navbar-expand-lg bg-dark">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="index.html"
+				<a class="navbar-brand" href="index.html" id="logo"
 					><img
 						class="company-logo"
 						src="https://cdn-icons-png.flaticon.com/512/1053/1053916.png"
 						alt="company logo"
 				/></a>
-
-				<div class="dropdown">
-					<img
-						class="user-icon dropdown-toggle"
-						data-bs-toggle="dropdown"
-						id="profilePicture"
-						src="https://cdn.vectorstock.com/i/preview-1x/23/81/default-avatar-profile-icon-vector-18942381.jpg"
-						alt="user icon"
-					/>
-					<ul class="dropdown-menu">
-						<li>
-							<a class="dropdown-item" href="matchingPage.html"
-								>Find A Fit</a
-							>
-						</li>
-						<li>
-							<a class="dropdown-item" href="#" id="matchesOption"
-								>Matches</a
-							>
-						</li>
-						<li>
-							<a class="dropdown-item" href="#" id="logoutOption"
-								>Logout</a
-							>
-						</li>
-					</ul>
-				</div>
-				<!-- Only one of these shows at once -->
-				<!-- <button class="btn btn-outline-success">Login</button> -->
-			</div>
 		</nav>
 		<h1 class="title">My UFit Profile</h1>
 		<!--Please note that fields are left as readonly/disabled to indicate that the profile is currently not-editable. 
